--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,8 +7,8 @@ on:
 
 jobs:
   build:
-    name: Build
-    runs-on: ubuntu-latest
+    name: Build and release
+    runs-on: windows-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -18,8 +18,6 @@ jobs:
           go-version-file: 'go.mod'
       - name: Build gurl
         run: bash build.sh
-      - name: Test
-        run: gunzip gurl-linux-x86_64.gz && ./gurl-linux-x86_64 -h && gzip -f gurl-linux-x86_64
       - name: Create release
         uses: ncipollo/release-action@v1
         with:
